2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2012-07-09  Andreas Kupries  <aku@hephaistos>

	* logger.tcl: [Bug 3541628]: Fixed creative writing issue in
	* logger.man: logger::init. Bumped package to version 0.9.3
	* pkgIndex.tcl: Whitespace cleanup in places.

2011-12-20  Michael Schlenker <mic42@users.sourceforge.net>

        Fix for [Bug 3463420]. The default loglevel was not
	being inherited. Increased version to 0.9.2.
	* logger.tcl:
	* logger.test:
	* pkgIndex.tcl:

2011-12-20  Michael Schlenker <mic42@users.sourceforge.net>

        * logger.man: Fix for [Bug 3462341].
	* logger.tcl: The use of empty servicenames is not allowed.
	* logger.test: The use of a name of only : is also forbidden.
	* pkgIndex.tcl:

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	*

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	*

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	*

2009-10-27  Andreas Kupries  <andreask@activestate.com>

	* log.man: Flush writes to the log channel. Bumped to
	* log.tcl: version 1.3.
	* pkgIndex.tcl:

2008-12-22  Andreas Kupries  <andreask@activestate.com>

	* log.man: Extended documentation a bit to tell about the levels
	* log.tcl: which are suppressed by default. Added comment to code
	  to point from the first initialization to the second at the
	  bottom of the file. Fixes [Bug 2418580].

2008-12-17  Michael Schlenker <mic42@users.sourceforge.net>

        * logger.tcl: Applied modified patch [RFE 2381524].
	* logger.test: Thanks to Hemang Lavana for the patch.
	* pkgIndex.tcl: Added -errorcode arguments and msgcat::mc
	  calls to all error messages, so this could be localized.